--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <guava.version>23.0</guava.version>
     </properties>
 
     <repositories>
@@ -40,6 +41,16 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <resources>
