Customise date/time of git-commit-id-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,10 @@
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
+                <configuration>
+                    <dateFormat>yyyy-MM-dd HH:mm:ss z</dateFormat>
+                    <dateFormatTimeZone>Etc/UTC</dateFormatTimeZone>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
